# MyFi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.pt.md  main.py  pyproject.toml  requirements.txt  scan.txt  test.py
backend/: Scanner.py  main.py
config/: config.py  example.py
core/: Scanner.py  alert_telegram.py  config_manager.py  monitor.py  setup.py
data/: myfi.db
logs/: scan.txt
src/myfi/core/: MonitorCore.py  alert_telegram.py  alerts.py  config_manager.py  monitor.py  scanner.py
src/myfi/db/: database.py
src/myfi/ui/cli/: main.py  setup_wizard.py
src/myfi/ui/web/: app.py
src/myfi/ui/web/static/: automacao.js  dashboard.js  main.js  style.css
src/myfi/ui/web/templates/: alertas.html  automacao.html  configuracoes.html  dashboard.html  dispositivos.html
ui/cli/: setup_wizard.py
